--- a/blog-detail.html
+++ b/blog-detail.html
@@ -174,7 +174,7 @@
             <div class="what_otherblog">
                 <!--  -->
                 <div class="item">
-                    <img src="./image/blog_listmain.png" alt="">
+                    <img src="./image/blog_listmain4.png" alt="">
                     <div class="blog_inner">
                         <h6>By Admin l Aug 23, 2021 </h6>
                         <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
@@ -184,7 +184,7 @@
                 </div>
                 <!--  -->
                 <div class="item">
-                    <img src="./image/blog_listmain.png" alt="">
+                    <img src="./image/blog_listmain1.png" alt="">
                     <div class="blog_inner">
                         <h6>By Admin l Aug 23, 2021 </h6>
                         <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
@@ -194,7 +194,7 @@
                 </div>
                 <!--  -->
                 <div class="item">
-                    <img src="./image/blog_listmain.png" alt="">
+                    <img src="./image/blog_listmain2.png" alt="">
                     <div class="blog_inner">
                         <h6>By Admin l Aug 23, 2021 </h6>
                         <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
@@ -204,7 +204,7 @@
                 </div>
                 <!--  -->
                 <div class="item">
-                    <img src="./image/blog_listmain.png" alt="">
+                    <img src="./image/blog_listmain3.png" alt="">
                     <div class="blog_inner">
                         <h6>By Admin l Aug 23, 2021 </h6>
                         <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
