--- a/contact.html
+++ b/contact.html
@@ -113,13 +113,13 @@
                     <!--  -->
                     <div class="form_flex">
                         <div class="form-group">
-                            <label for="Email*">Email</label>
-                            <input type="email" class="form-control" placeholder="Enter Your Email">
+                            <label for="Email*">Business name </label>
+                            <input type="email" class="form-control" placeholder="Enter Your Business name">
                         </div>
                         <!--  -->
                         <div class="form-group">
-                            <label for="Phone Number">Phone Number</label>
-                            <input type="tel" class="form-control" placeholder="Enter Your Phone Number">
+                            <label for="Phone Number">Business address</label>
+                            <input type="tel" class="form-control" placeholder="Enter Your Business address">
                         </div>
                     </div>
                     <!--  -->
@@ -129,7 +129,17 @@
                             placeholder="Type your message here...."></textarea>
                     </div>
                     <!--  -->
-                    <button class="form-control submit_contact">Submit</button>
+                    <div class="form_flex align-items-end">
+                        <div class="form-group">
+                            <label for="Email*">Attachment</label>
+                            <input type="File" class="form-control" placeholder="attachment">
+                        </div>
+                        <!--  -->
+                        <div class="form-group">
+                            <button class="form-control submit_contact">Submit</button>
+                        </div>
+                    </div>
+                    <!--  -->
                 </form>
             </div>
         </div>
