--- a/listing-page.html
+++ b/listing-page.html
@@ -30,7 +30,7 @@
                 <div class="line"></div>
             </label>
             <div class="logo">
-                <a href="/">
+                <a href="/BMI/">
                     <img src="./image/site-Logo.png" alt="Reymart-Logo" title="Reymart-Logo">
                 </a>
             </div>
